2010-10-15  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix bindir check logic, and relax non-bindir case for AIX.
	* tests/bindir.at (bindir install tests): Rewrite checks for
	place of the installed shared library in two separate tests,
	depending on whether -bindir is supposed to have an effect or
	not.  In the positive case, make the test stricter so that we
	reject libraries in $libdir.  In the negative case, do not
	require a major version number in the $libdir file name, for AIX
	without runtimelinking.  If tmpdir creation fails, skip the
	test.  Use fewer bindir directory names for testing, to speed
	up the test.  Also mention MSVC style DLL name in comment.
	Report by Peter Rosin.

	tests: remove unneeded 'bindir compile check' test.
	* tests/bindir.at (bindir compile check): Remove.

2010-10-14  Peter Rosin  <peda@lysator.liu.se>

	tests: fix $EXEEXT typo.
	* tests/depdemo-relink.test (func_restore_files): Use $EXEEXT
	instead of $EXEXT.

2010-10-12  Simon Josefsson  <simon@josefsson.org>
	    Matěj Týč <matej.tyc@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	docs: improve description of -no-undefined.
	* doc/libtool.texi (Link mode): Fix -no-undefined description.
	(Inter-library dependencies): Use Windows not AIX as example
	system.  Clarify need for symbol resolution at library creation
	time.

2010-10-09  Paolo Bonzini  <bonzini@gnu.org>

	Add missing sysroot resolution.
	* libltdl/config/ltmain.m4sh (func_mode_link): Resolve sysroot
	when fetching the install directory of dependent libraries.
	Reported by Lionel Landwerlin <llandwerlin@gmail.com>,
	patch by Khem Raj <raj.khem@gmail.com>.
	* THANKS: Reorder entries, add Khem and Lionel.

2010-10-07  Roumen Petrov  <bugtrack@roumenpetrov.info>

	Add test case for 69e77671 (cwrapper PATH manipulation order)
	* tests/cwrapper.at: Add new test 'cwrapper and installed shared
	libraries.'

2010-10-04  Peter Rosin  <peda@lysator.liu.se>
