@@ -145,6 +145,7 @@
   Patrick Welche		prlw1@newn.cam.ac.uk
   Paul Biggar			paul.biggar@gmail.com
   Paul Eggert			eggert@twinsun.com
+  Paul Laight			plaight@quantxautomation.co.uk
   Peter Eisentraut		peter_e@gmx.net
   Peter Fritzsche		peter.fritzsche@gmx.de
   Peter Jeremy			peterjeremy@optushome.com.au
